# rp-pico-thermostat

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml  host.yml  target.yml
Testing/: TAG
Testing/20240526-0242/: Test.xml
lib/: CMakeLists.txt
src/: CMakeLists.txt  README.md  main.cpp  test_main.cpp
src/command_parser/: command_parser.cpp  command_parser.hpp
src/common/: pins.h  secrets.h  thermostat_common.hpp
src/configuration/: configuration.cpp  configuration.hpp
src/display/: display.cpp  display.hpp
src/environment_sensor/: environment_sensor.cpp  environment_sensor.hpp
src/gpio/: gpio.cpp  gpio.hpp
src/hvac/: hvac.cpp  hvac.hpp
src/i2c_bus/: i2c_bus.cpp  i2c_bus.hpp
src/json/: json.cpp  json.hpp
src/logging/: logger.cpp  logger.hpp
src/mqtt/: mqtt.cpp  mqtt.hpp
src/producer/: producer.cpp  producer.hpp
src/repl/: repl.cpp  repl.hpp
src/subscriber/: subscriber.cpp  subscriber.hpp
src/temperature_controller/: temperature_controller.cpp  temperature_controller.hpp
src/thermostat/: thermostat.cpp  thermostat.hpp
src/thermostat_context/: thermostat_context.hpp
src/thermostat_controller/: thermostat_controller.cpp  thermostat_controller.hpp
src/watchdog/: watchdog.cpp  watchdog.hpp
src/wifi/: lwipopts.h  wifi.cpp  wifi.hpp
test/: CMakeLists.txt
test/command_parser/: CMakeLists.txt  test_command_parser.cpp
test/environment_sensor/: CMakeLists.txt  mock_environment_sensor.cpp  test_environment_sensor.cpp
test/gpio/: mock_gpio.cpp
test/hvac/: CMakeLists.txt  mock_hvac.cpp  test_hvac.cpp
test/i2c_bus/: CMakeLists.txt  mock_i2c_bus.cpp  test_mock_i2c_bus.cpp
test/json/: CMakeLists.txt  json_test.cpp
test/logging/: CMakeLists.txt  test_logger.cpp
test/mocks/: mock_configuration.cpp  mock_json.cpp  mock_mqtt.cpp  mock_producer.cpp  mock_watchdog.cpp  mock_wifi.cpp
test/mocks/hardware_mocks/hardware/: flash.cpp  flash.h  sync.cpp  sync.h  uart.cpp  uart.h
test/mocks/pico/: cyw43_arch.cpp  cyw43_arch.h
test/mocks/pico_mocks/pico/: stdlib.cpp  stdlib.h
test/producer/: CMakeLists.txt  test_producer.cpp
test/repl/: CMakeLists.txt  test_repl.cpp  test_repl_main.cpp
test/subscriber/: CMakeLists.txt  test_subscriber.cpp  test_subscriber_main.cpp
test/temperature_controller/: CMakeLists.txt  test_temperature_controller.cpp
test/thermostat/: CMakeLists.txt  mock_thermostat.cpp  test_thermostat.cpp  test_thermostat_controller.cpp  test_thermostat_init.cpp
test/thermostat_controller/: CMakeLists.txt  test_thermostat_controller.cpp
test/wifi/: CMakeLists.txt  test_wifi.cpp
tools/: generate.py
tools/templates/: CMakeLists.txt.template  header.hpp.template  source.cpp.template  test.cpp.template
